--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.1.4.RELEASE</spring.version>
 		<spring.security.version>4.0.0.RC1</spring.security.version>
-		<neo4j.version>2.2.2</neo4j.version>
+		<neo4j.version>2.1.7</neo4j.version>
 		<sdn.version>4.0.0.M1</sdn.version>
 	</properties>
 
@@ -104,7 +104,13 @@
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-ogm-test</artifactId>
-			<version>1.0.0.BUILD-SNAPSHOT</version>
+			<version>1.0.0.M1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-io</artifactId>
+			<version>2.2.0</version>
+			<type>test-jar</type>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -143,6 +149,6 @@
 		</repository>
 
 	</repositories>
-	
-	
+
+
 </project>
