--- a/pom.xml
+++ b/pom.xml
@@ -141,11 +141,13 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>1.8.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.8.1</version>
 		</dependency>
+
 	</dependencies>
 
 
@@ -175,6 +177,35 @@
 					<source>${compiler.version}</source>
 					<target>${compiler.version}</target>
 				</configuration>
+			</plugin>
+			<!-- AspectJ configuration -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.7</version>
+				<configuration>
+					<complianceLevel>1.8</complianceLevel>
+					<source>1.8</source>
+					<target>1.8</target>
+					<weaveDependencies>
+						<weaveDependency>
+							<groupId>org.neo4j</groupId>
+							<artifactId>neo4j-ogm</artifactId>
+						</weaveDependency>
+						<weaveDependency>
+							<groupId>org.springframework.data</groupId>
+							<artifactId>spring-data-neo4j</artifactId>
+						</weaveDependency>
+					</weaveDependencies>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>test-compile</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
